syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "SecuritySecuritygroupProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Security Component - Security Group
message SecurityGroupFlatData {
    option (routines.entity_type) = "SecurityGroup";
    option (routines.keys).keys = "group_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: groupId
    string group_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string group_name = 2 [(routines.opts).field_type = "value"];
    string description = 3 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string tenant_id = 6 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14 ;
}

message SecurityGroupKey{
    string group_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message SecurityGroupList{
    repeated SecurityGroupFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListSecurityGroups` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Security Component - Security Group Permission
message SecurityGroupPermissionData {
    option (routines.entity_type) = "SecurityGroupPermission";
    option (routines.keys).keys = "group_id, permission_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: groupId, permissionId, fromDate
    // fields
    string group_id = 1 [(routines.opts).field_type = "id"];
    string permission_id = 2 [(routines.opts).field_type = "id-long"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message SecurityGroupPermissionKey{
    string group_id = 1 [(routines.opts).field_type = "id"];
    string permission_id = 2 [(routines.opts).field_type = "id-long"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message SecurityGroupPermissionList{
    repeated SecurityGroupPermissionData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListSecurityGroupPermissions` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// flat-ent: Security Component - Security Permission
message SecurityPermissionFlatData {
    option (routines.entity_type) = "SecurityPermission";
    option (routines.keys).keys = "permission_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: permissionId
    string permission_id = 1 [(routines.opts).field_type = "id-long", (google.api.graphql.relay_options).id = true];
    string description = 2 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    string tenant_id = 5 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9 ;
}

message SecurityPermissionKey{
    string permission_id = 1 [(routines.opts).field_type = "id-long", (google.api.graphql.relay_options).id = true];
}

message SecurityPermissionList{
    repeated SecurityPermissionFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListSecurityPermissions` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Security Component - User Login Security Group
message UserLoginSecurityGroupData {
    option (routines.entity_type) = "UserLoginSecurityGroup";
    option (routines.keys).keys = "user_login_id, group_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: userLoginId, groupId, fromDate
    // fields
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong"];
    string group_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


message UserLoginSecurityGroupKey{
    string user_login_id = 1 [(routines.opts).field_type = "id-vlong"];
    string group_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 3 [(routines.opts).field_type = "date-time"];
}

message UserLoginSecurityGroupList{
    repeated UserLoginSecurityGroupData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListUserLoginSecurityGroups` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


